--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     container_name: "webhook-site"
     image: "webhooksite/webhook.site"
     # Enable build for development:
-    # build:
-    #   dockerfile: Dockerfile
-    #   context: ./
+    build:
+      dockerfile: Dockerfile
+      context: ./
     command: php artisan queue:work --daemon --tries=3 --timeout=10
     ports:
       - "8084:80"
